plugins {
    id("java-library")
    id("org.jetbrains.kotlin.jvm") version "1.6.0"
    id("io.papermc.paperweight.userdev") version "1.3.2"
}

repositories {
    mavenCentral()
    mavenLocal()
    maven { url = "https://repo.dmulloy2.net/nexus/repository/public/" }
    maven { url = "https://repo.md-5.net/content/repositories/releases/" }
    maven { url = "https://papermc.io/repo/repository/maven-public/" }
    maven { url = "https://repo.aikar.co/content/groups/aikar/" }
    maven { url = "https://oss.sonatype.org/content/repositories/central" }
    maven { url = "https://oss.sonatype.org/content/repositories/snapshots" }
    maven { url = "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
}

dependencies {
    paperweightDevelopmentBundle("io.papermc.paper:dev-bundle:1.18.1-R0.1-SNAPSHOT")

    shadow group: "org.apache.commons", name: "commons-math3", version: "3.6.1"
    shadow "com.github.elBukkit:EffectLib:master-SNAPSHOT"
    shadow "com.github.PaperMC:PaperLib:master-SNAPSHOT"
    shadow "co.aikar:acf-paper:0.5.0-SNAPSHOT"
    shadow "net.kyori:adventure-text-minimessage:4.2.0-SNAPSHOT"
    shadow "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.10"

    implementation group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.7.0"

    implementation "io.papermc.paper:paper-api:1.18.1-R0.1-SNAPSHOT"
    implementation "org.spigotmc:spigot:1.18.1-R0.1-SNAPSHOT"

    implementation "com.github.libraryaddict:LibsDisguises:v10.0.25"
    //implementation "com.github.Updated-NoCheatPlus.NoCheatPlus:ncpbuildbase:master-SNAPSHOT"
    implementation "com.github.MilkBowl:VaultAPI:master-SNAPSHOT"
    implementation "com.github.EngineHub:WorldEdit:9a5ef70858"
    implementation "com.github.EngineHub:WorldGuard:528ba32a93"
    implementation "com.github.PlaceholderAPI:PlaceholderAPI:c2ab9f5b85"
    implementation "com.github.TechFortress:GriefPrevention:master-SNAPSHOT"
    implementation "com.github.metalshark:GlowAPI:2.0.0"
}

shadowJar {
    setArchivesBaseName("MagicSpells")
    relocate("net.kyori.adventure.text.minimessage", "com.nisovin.magicspells.shaded.minimessage")
    relocate("org.apache.commons.math3", "com.nisovin.magicspells.shaded.org.apache.commons")
    relocate("de.slikey.effectlib", "com.nisovin.magicspells.shaded.effectlib")
    relocate("ru.xezard.glow", "com.nisovin.magicspells.shaded.xglow")
    relocate("kotlin", "com.nisovin.magicspells.shaded.kotlin")
    relocate("co.aikar.commands", "com.nisovin.magicspells.shaded.acf")
    relocate("co.aikar.locales", "com.nisovin.magicspells.shaded.locales")
    archiveClassifier.set("")
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "17"
        javaParameters = true
    }
}

compileTestKotlin {
    kotlinOptions {
        jvmTarget = "17"
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = "com.nisovin.magicspells"
            from components.java
        }
    }
}

tasks {
    build {
        dependsOn(reobfJar)
    }
}
